HEAD
	+ Decode strings coming from LDAP to handle non-ASCII values correctly
	+ Updated the view code to use
	  EBox::Users::InetOrgPerson::generatedFullname API
	+ Documented and made EBox::Users::InetOrgPerson::generatedFullname method
	  more robust
	+ Added basic format check for InetOrgPerson fields
	+ Updated group name and username validation code to follow Windows
	  restrictions and added unit tests for those restrictions
3.2.12
	+ Fixed bug when altering mail address through the edit user form
	+ Better integration between mail addon and mail field
3.2.11
	+ Remove method canonicalName and use object DNs for greater performance
3.2.10
	+ Added and used checkMailNotInUse method
3.2.9
	+ Updated cloud sync to ignore any change done in cloud to internal users
	  or groups
	+ Fixed EBox::CloudSync::Slave to sync uid and gid numbers on user update
	  and added unit tests for it
	+ Added EBox::Users::Group::setInternal method
	+ Allow to use lazy flag with EBox::Users::User::setInternal
	+ Added unit tests for cloud sync code
3.2.8
	+ Check available IP addresses when enable module
	+ Added lock to cloud-sync script
	+ Better integration of edit groups for mail group aliases
	+ Update group icon when type of group changes
	+ Implement _preModifyUser on LdapUserBase
	+ Throw exceptions on EBox::USers::LdapObject::get when entry not exists
	+ Fixed regression in LDAP info page for external AD mode
3.2.7
	+ Print slave-sync output to zentyal.log instead of stdout
	+ Fixed excesive restrictive validation of external AD password in wizard
	+ Fixed 3.0 -> 3.2 migration when there are other modules extending LDAP
3.2.6
	+ Remove useless warning when deleting a user or group with offer 2013
	+ Show system but not internal groups in user edition form
	+ Allow unsafe characters for user and password in external AD mode.
	+ Fixed bug in external AD connection. Reuse already estabished
	  external AD connection.
	+ The "sub ous" return the OUs hierarquically ordered